--- a/arch/sandbox/dts/sandbox.dtsi
+++ b/arch/sandbox/dts/sandbox.dtsi
@@ -5,6 +5,8 @@
 
 #define USB_CLASS_HUB			9
 
+#include <dt-bindings/cros/nvdata.h>
+
 / {
 	chosen {
 		stdout-path = "/serial";
@@ -219,7 +221,7 @@
 		firmware_storage_spi: flash@0 {
 			u-boot,dm-pre-proper;
 			reg = <0>;
-			compatible = "spansion,m25p16", "jedec,spi-nor";
+			compatible = "spansion,w25q128", "jedec,spi-nor";
 			spi-max-frequency = <40000000>;
 			sandbox,filename = "spi.bin";
 		};
@@ -287,6 +289,15 @@
 
 	tpm {
 		compatible = "google,sandbox-tpm";
+
+		nvdata {
+			u-boot,dm-pre-reloc;
+			compatible = "google,tpm-secdata";
+			nvdata,types = <CROS_NV_SECDATA
+				CROS_NV_SECDATAK
+				CROS_NV_REC_HASH>;
+		};
+
 	};
 
 	tpm2 {
@@ -425,6 +436,7 @@
 	nvdata {
 		u-boot,dm-pre-reloc;
 		compatible = "google,cros-ec-nvdata";
+		nvdata,types = <CROS_NV_DATA>;
 	};
 
 	cros_ec_vboot: vboot {
