--- a/arch/x86/dts/chromebook_coral.dts
+++ b/arch/x86/dts/chromebook_coral.dts
@@ -11,9 +11,9 @@
 /include/ "tsc_timer.dtsi"
 
 #if defined(CONFIG_CHROMEOS_VBOOT) && defined(CONFIG_ROM_SIZE)
-#include "chromeos-x86.dtsi"
+#include "chromeos-coral.dtsi"
 #include "flashmap-x86-ro.dtsi"
-#include "flashmap-16mb-rw.dtsi"
+#include "flashmap-16mb-x86-rw.dtsi"
 #endif
 
 #include <dt-bindings/clock/intel-clock.h>
@@ -30,6 +30,7 @@
 #include <asm/arch-apollolake/fsp/fsp_m_upd.h>
 #include <asm/arch-apollolake/fsp/fsp_s_upd.h>
 #include <dt-bindings/sound/nhlt.h>
+#include <dt-bindings/cros/nvdata.h>
 
 / {
 	model = "Google Coral";
@@ -49,6 +50,7 @@
 		i2c7 = &i2c_7;
 		mmc0 = &emmc;
 		mmc1 = &sdmmc;
+		cros-vboot-ec0 = &cros_ec_vboot;
 	};
 
 	board: board {
@@ -68,6 +70,18 @@
 		 *	&gpio_nw GPIO_17 GPIO_ACTIVE_HIGH>;
 		 */
 		smbios {
+			/* Type 0 table */
+			bios {
+				/*
+				 * Allow at least 66 bytes for version so
+				 * Chrome OS can insert a new string later, of
+				 * at least 64 bytes plus terminator, which is
+				 * the size of chromeos_acpi_gnvs->fwid. See
+				 * vboot_update_acpi().
+				 */
+				version = "                                                                ";
+			};
+
 			/* Type 1 table */
 			system {
 				manufacturer = "Google";
@@ -349,6 +363,7 @@
 		spi: fast-spi@d,2 {
 			u-boot,dm-pre-proper;
 			u-boot,dm-spl;
+			u-boot,dm-vpl;
 			reg = <0x02006a10 0 0 0 0>;
 			#address-cells = <1>;
 			#size-cells = <0>;
@@ -361,6 +376,7 @@
 				#address-cells = <1>;
 				u-boot,dm-pre-proper;
 				u-boot,dm-spl;
+				u-boot,dm-vpl;
 				reg = <0>;
 				compatible = "winbond,w25q128fw",
 					 "jedec,spi-nor";
@@ -459,6 +475,14 @@
 				acpi,hid = "GOOG0005";
 				acpi,ddn = "I2C TPM";
 				acpi,name = "TPMI";
+
+				secdata {
+					u-boot,dm-vpl;
+					compatible = "google,tpm-secdata";
+					nvdata,types = <CROS_NV_SECDATA
+						CROS_NV_SECDATAK
+						CROS_NV_REC_HASH>;
+				};
 			};
 		};
 
@@ -622,9 +646,36 @@
 					 */
 					#address-cells = <1>;
 					#size-cells = <1>;
+
 					flash@8000000 {
 						reg = <0x08000000 0x20000>;
 						erase-value = <0xff>;
+					};
+
+					cros_ec_vboot: vboot {
+						compatible = "google,cros-ec-vboot";
+					};
+
+					nvdata-vstore {
+						u-boot,dm-vpl;
+						compatible = "google,cros-ec-nvdata";
+						nvdata,types = <CROS_NV_VSTORE>;
+					};
+
+					lid-open {
+						u-boot,dm-vpl;
+						/*
+						 * Ignore lid transitions after
+						 * boot
+						 */
+						primary-only;
+						compatible = "google,cros-ec-flag";
+					};
+
+					recovery {
+						u-boot,dm-vpl;
+						compatible = "google,cros-ec-flag";
+						primary-only;
 					};
 				};
 			};
@@ -1250,5 +1301,11 @@
 &rtc {
 	#address-cells = <1>;
 	#size-cells = <0>;
-	u-boot,dm-pre-proper;
+	u-boot,dm-vpl;
+	nvdata {
+		u-boot,dm-vpl;
+		compatible = "google,cmos-nvdata";
+		reg = <0x26>;
+		nvdata,types = <CROS_NV_DATA>;
+	};
 };
