--- a/configs/snow_defconfig
+++ b/configs/snow_defconfig
@@ -92,3 +92,5 @@ CONFIG_VIDEO_BRIDGE_NXP_PTN3460=y
 CONFIG_LCD=y
 CONFIG_TPM=y
 CONFIG_ERRNO_STR=y
+CONFIG_UNIT_TEST=y
+# CONFIG_UT_LIB_ASN1 is not set
