--- a/scripts/dtc/pylibfdt/Makefile
+++ b/scripts/dtc/pylibfdt/Makefile
@@ -23,7 +23,7 @@ quiet_cmd_pymod = PYMOD   $@
 		SWIG_OPTS="-I$(LIBFDT_srcdir) -I$(LIBFDT_srcdir)/.." \
 		$(PYTHON3) $< --quiet build_ext --inplace
 
-$(obj)/_libfdt.so $(obj)/libfdt.py &: $(src)/setup.py $(PYLIBFDT_srcs)
+rebuild: $(src)/setup.py $(PYLIBFDT_srcs)
 	@# Remove the library since otherwise Python doesn't seem to regenerate
 	@# the libfdt.py file if it is missing.
 	@rm -f $(obj)/_libfdt*.so
@@ -32,6 +32,8 @@ $(obj)/_libfdt.so $(obj)/libfdt.py &: $(src)/setup.py $(PYLIBFDT_srcs)
 	@if [ ! -e $(obj)/_libfdt.so ]; then \
 		mv $(obj)/_libfdt*.so $(obj)/_libfdt.so || true; \
 	fi
+
+$(obj)/_libfdt.so $(obj)/libfdt.py &: rebuild
 
 always += _libfdt.so libfdt.py
 
