image: Drop IMAGE_ENABLE_EN/DECRYPT defines
Add a host Kconfigs for IMAGE_ENABLE_ENCRYPT. With this we can use
CONFIG_IS_ENABLED() directly in the host build, so drop the unnecessary
indirections IMAGE_IMAGE_ENABLE_ENCRYPT and IMAGE_IMAGE_ENABLE_DECRYPT.

Signed-off-by: Simon Glass <sjg@chromium.org>

Series-changes: 5
- Rebase to next
- Use TOOLS_ instead of HOST_

--- a/tools/Kconfig
+++ b/tools/Kconfig
@@ -30,6 +30,18 @@ config TOOLS_FIT
 	help
 	  Enable FIT support in the tools builds.
 
+config TOOLS_FIT_CIPHER
+	bool
+	default y if FIT_CIPHER
+	help
+	 Enable ciphering data in a FIT in the tools builds
+
+config TOOLS_FIT_CIPHER_ENCRYPT
+	bool
+	default y if FIT_CIPHER
+	help
+	  Enables encryption in a FIT in the tools builds
+
 config TOOLS_FIT_FULL_CHECK
 	def_bool y
 	help
