--- a/tools/Kconfig
+++ b/tools/Kconfig
@@ -45,6 +45,11 @@ config TOOLS_FIT_RSASSA_PSS
 	help
 	  Support the rsassa-pss signature scheme in the tools builds
 
+config TOOLS_FIT_SIGN
+	def_bool y
+	help
+	  Enable signing FIT uImages in the tools builds
+
 config TOOLS_FIT_SIGNATURE
 	def_bool y
 	help
@@ -64,6 +69,11 @@ config TOOLS_MD5
 	def_bool y
 	help
 	  Enable MD5 support in the tools builds
+
+config TOOLS_RSA_VERIFY
+	def_bool y
+	help
+	  Enable RSA verification support in the tools builds
 
 config TOOLS_OF_LIBFDT
 	def_bool y
