--- a/cros/vboot/Makefile
+++ b/cros/vboot/Makefile
@@ -17,9 +17,9 @@ ifndef CONFIG_SPL_BUILD
 obj-y += auxfw.o
 obj-y += boot_device.o
 obj-$(CONFIG_X86) += cb_helper.o
-obj-y += display.o
+#obj-y += display.o
 obj-y += graphics.o
 obj-y += keyboard.o
-obj-y += screens.o
+#obj-y += screens.o
 obj-y += vbfile.o
 endif
