--- a/configs/chromeos_sandbox_defconfig
+++ b/configs/chromeos_sandbox_defconfig
@@ -29,6 +29,7 @@ CONFIG_LOG_MAX_LEVEL=8
 CONFIG_LOGF_FUNC=y
 CONFIG_SPL_LOG_MAX_LEVEL=7
 CONFIG_TPL_LOG_MAX_LEVEL=7
+CONFIG_VPL_LOG_MAX_LEVEL=7
 CONFIG_LOG_ERROR_RETURN=y
 CONFIG_DISPLAY_BOARDINFO_LATE=y
 # CONFIG_AVB_VERIFY is not set
@@ -211,3 +212,6 @@ CONFIG_SPL_UNIT_TEST=y
 CONFIG_UT_TIME=y
 CONFIG_UT_DM=y
 CONFIG_VPL_CHROMEOS=y
+CONFIG_VPL_NVDATA_TPM=y
+CONFIG_VPL_NVDATA_CROS_EC=y
+CONFIG_VPL_CROS_EC_SANDBOX=y
