--- a/arch/sandbox/dts/sandbox.dtsi
+++ b/arch/sandbox/dts/sandbox.dtsi
@@ -223,7 +223,7 @@
 			reg = <0>;
 			compatible = "spansion,w25q128", "jedec,spi-nor";
 			spi-max-frequency = <40000000>;
-			sandbox,filename = "spi.bin";
+			sandbox,filename = "spi-cros.bin";
 		};
 	};
 
