--- a/arch/sandbox/dts/sandbox.dtsi
+++ b/arch/sandbox/dts/sandbox.dtsi
@@ -296,7 +296,7 @@
 			compatible = "google,tpm-secdata";
 			nvdata,types = <CROS_NV_SECDATAF
 				CROS_NV_SECDATAK
-				CROS_NV_REC_HASH>;
+				CROS_NV_MRC_REC_HASH>;
 		};
 
 	};
