--- a/cros/nvdata/Kconfig
+++ b/cros/nvdata/Kconfig
@@ -29,7 +29,7 @@ config NVDATA_TPM
 	  the TPM is reset and cleared, typically after a 'power wash' cycle
 	  causes the device to enter the initial OOBE (Out-of-Box-Experience)
 	  screen. This driver supports CROS_NV_SECDATAF, CROS_NV_SECDATAK and
-	  CROS_NV_REC_HASH types.
+	  CROS_NV_MRC_REC_HASH types.
 
 config SPL_NVDATA_TPM
 	bool "Non-volatile data driver that uses the TPM in SPL"
