--- a/configs/chromeos_sandbox_defconfig
+++ b/configs/chromeos_sandbox_defconfig
@@ -26,6 +26,7 @@ CONFIG_CONSOLE_RECORD_OUT_SIZE=0x1000
 CONFIG_PRE_CONSOLE_BUFFER=y
 CONFIG_LOG=y
 CONFIG_LOG_MAX_LEVEL=8
+CONFIG_LOGF_FUNC=y
 CONFIG_SPL_LOG_MAX_LEVEL=7
 CONFIG_TPL_LOG_MAX_LEVEL=7
 CONFIG_VPL_LOG_MAX_LEVEL=7
