--- a/arch/sandbox/dts/sandbox.dtsi
+++ b/arch/sandbox/dts/sandbox.dtsi
@@ -300,7 +300,8 @@
 			compatible = "google,tpm-secdata";
 			nvdata,types = <CROS_NV_SECDATAF
 				CROS_NV_SECDATAK
-				CROS_NV_MRC_REC_HASH>;
+				CROS_NV_MRC_REC_HASH
+				CROS_NV_FWMP>;
 		};
 
 	};
