--- a/configs/chromeos_sandbox_defconfig
+++ b/configs/chromeos_sandbox_defconfig
@@ -34,6 +34,7 @@ CONFIG_LOG_ERROR_RETURN=y
 CONFIG_DISPLAY_BOARDINFO_LATE=y
 # CONFIG_AVB_VERIFY is not set
 CONFIG_BLOBLIST_SIZE=0x3200
+CONFIG_BLOBLIST_SIZE_RELOC=0x14000
 CONFIG_HANDOFF=y
 CONFIG_SPL_HASH_SUPPORT=y
 CONFIG_TPL_ENV_SUPPORT=y
