--- a/configs/chromeos_sandbox_defconfig
+++ b/configs/chromeos_sandbox_defconfig
@@ -34,7 +34,7 @@ CONFIG_LOG_ERROR_RETURN=y
 CONFIG_DISPLAY_BOARDINFO_LATE=y
 # CONFIG_AVB_VERIFY is not set
 CONFIG_BLOBLIST_SIZE=0x3200
-CONFIG_BLOBLIST_SIZE_RELOC=0x14000
+CONFIG_BLOBLIST_SIZE_RELOC=0x18000
 CONFIG_HANDOFF=y
 CONFIG_SPL_HASH_SUPPORT=y
 CONFIG_TPL_ENV_SUPPORT=y
@@ -216,3 +216,4 @@ CONFIG_VPL_CHROMEOS=y
 CONFIG_VPL_NVDATA_TPM=y
 CONFIG_VPL_NVDATA_CROS_EC=y
 CONFIG_VPL_CROS_EC_SANDBOX=y
+# CONFIG_FIT_SIGNATURE is not set
