--- a/cros/lib/Makefile
+++ b/cros/lib/Makefile
@@ -7,12 +7,14 @@ obj-$(CONFIG_$(SPL_)X86) += acpi.o
 obj-y += aux-fw-uclass.o
 obj-y += cros_ofnode.o
 obj-y += fpmath.o
-obj-y += secdata_tpm.o
 ifndef CONFIG_SANDBOX
 obj-y += jump.o
 endif
+obj-y += memory.o
 obj-y += memwipe.o
+obj-y += ranges.o
 obj-y += resource.o
+obj-y += secdata_tpm.o
 obj-y += tpm_common.o
 obj-y += vboot_internal.o
 obj-y += vboot-ec-uclass.o
