--- a/configs/chromeos_sandbox_defconfig
+++ b/configs/chromeos_sandbox_defconfig
@@ -217,3 +217,5 @@ CONFIG_VPL_NVDATA_TPM=y
 CONFIG_VPL_NVDATA_CROS_EC=y
 CONFIG_VPL_CROS_EC_SANDBOX=y
 # CONFIG_FIT_SIGNATURE is not set
+CONFIG_LZMA=y
+CONFIG_SPL_LZMA=y
