WIP: snapper9260 DM conversion
This makes a start at the conversion. Not boot-tested.

Signed-off-by: Simon Glass <sjg@chromium.org>

--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -941,6 +941,9 @@ dtb-$(CONFIG_TARGET_AT91SAM9260EK) += \
 	at91sam9g20ek.dtb	\
 	at91sam9g20ek_2mmc.dtb
 
+dtb-$(CONFIG_AT91SAM9260) += \
+	at91sam9260-snapper9260.dtb
+
 dtb-$(CONFIG_TARGET_AT91SAM9M10G45EK) += at91sam9m10g45ek.dtb
 
 dtb-$(CONFIG_TARGET_PM9G45) += at91sam9m10g45ek.dtb
