--- a/configs/snapper9260_defconfig
+++ b/configs/snapper9260_defconfig
@@ -42,3 +42,9 @@ CONFIG_NAND_ATMEL=y
 CONFIG_ATMEL_USART=y
 CONFIG_USB=y
 CONFIG_USB_STORAGE=y
+CONFIG_DM_USB=y
+CONFIG_OF_CONTROL=y
+CONFIG_DM_ETH=y
+CONFIG_PHYLIB=y
+CONFIG_DEFAULT_DEVICE_TREE="at91sam9260-snapper9260"
+CONFIG_BLK=y
