--- a/boot/Kconfig
+++ b/boot/Kconfig
@@ -25,6 +25,20 @@ config FIT
 
 if FIT
 
+config VBE
+	bool "Verified boot for Embedded (VBE)"
+	select BINMAN
+	select CONFIG_BINMAN_FDT
+	# default y
+	help
+	  Support booting using VBE, a method for handling selection of the
+	  image to boot, dealing with updates and providing verification of
+	  images.
+
+	  For more information about VBE, see
+
+	    https://drive.google.com/file/d/1ggW0KJpUOR__vBkj3l61L2dav4ZkNC12/view?usp=sharing
+
 config FIT_EXTERNAL_OFFSET
 	hex "FIT external data offset"
 	default 0x0
@@ -289,6 +303,26 @@ config SPL_FIT_GENERATOR
 endif # SPL
 
 endif # FIT
+
+config BOOTMETHOD
+	bool "Bootmethod support"
+	default y if SANDBOX
+	help
+	  A bootmethod is a standard way of locating something to boot,
+	  typically an Operating System such as Linux. Enable this to support
+	  iterating through available bootmethods to find a bootflow suitable
+	  for booting.
+
+config BOOTMETHOD_DISTRO
+	bool "Bootmethod support for distro boot"
+	depends on BOOTMETHOD
+	default y
+	help
+	  Enables support for distro boot using bootmethods. This makes the
+	  bootmethods look for a 'boot/extlinux/extlinux.conf' on each
+	  filesystem they scan.
+
+	  This provides a way to try out bootmethod on an existing boot flow.
 
 config LEGACY_IMAGE_FORMAT
 	bool "Enable support for the legacy image format"
