--- a/cmd/Kconfig
+++ b/cmd/Kconfig
@@ -194,6 +194,14 @@ config CMD_BOOTM
 	help
 	  Boot an application image from the memory.
 
+config CMD_BOOTMETHOD
+	bool "bootmethod"
+	default y if BOOTMETHOD
+	help
+	  Support working with bootmethods, including listing available ones
+	  and showing information about a particular one. It also allows
+	  looking at bootflows available with the bootmethod.
+
 config BOOTM_EFI
 	bool "Support booting UEFI FIT images"
 	depends on CMD_BOOTEFI && CMD_BOOTM && FIT
