sandbox: Detect the host bit size automatically
At present if you build sandbox on a 32-bit host a lot of errors are
produced. This is because CONFIG_HOST_64BIT is enabled by default.

It is quite annoying to have to change that manually before building
sandbox. It is also quite confusing for new users.

Add a way to detect the setting and add the appropriate
CONFIG_HOST_64BIT=y or CONFIG_HOST_32BIT=y to the defconfig, to avoid
this issue.

Series-to: u-boot
Series-cc: trini, heinrich
Series-version: 2
Series-changes: 2
- Drop patches previously applied
- Put all the packages in gcc.rst

Cover-letter:
Fix compiler warnings for 32-bit ARM
These were noticed when building sandbox on a Raspberry Pi 400, which uses
32-bit linux.

To make this work, I enabled CONFIG_HOST_32BIT in 'make menuconfig'. It
would be nice if that were automatic, since we have the logic already in
arch/sandbox/config.mk

So this series adds that.

It also fixes the unicode warnings of the form:

/usr/bin/ld: warning: arch/sandbox/cpu/start.o uses 2-byte wchar_t yet the
output is to use 4-byte wchar_t; use of wchar_t values across objects
may fail

END

Signed-off-by: Simon Glass <sjg@chromium.org>

--- a/arch/sandbox/Kconfig
+++ b/arch/sandbox/Kconfig
@@ -35,12 +35,12 @@ config SYS_CONFIG_NAME
 
 choice
 	prompt "Run sandbox on 32/64-bit host"
-	default HOST_64BIT
+	default HOST_DETECT_BIT
 	help
-	  Sandbox can be built on 32-bit and 64-bit hosts.
-	  The default is to build on a 64-bit host and run
-	  on a 64-bit host. If you want to run sandbox on
-	  a 32-bit host, change it here.
+	  Sandbox can be built on 32-bit and 64-bit hosts. This is generally
+	  auto-detected but you can force a particular word size here. If you
+	  see strange warnings about SANDBOX_BITS_PER_LONG then you may have
+	  selected the wrong value.
 
 config HOST_32BIT
 	bool "32-bit host"
@@ -48,6 +48,9 @@ config HOST_32BIT
 
 config HOST_64BIT
 	bool "64-bit host"
+
+config HOST_DETECT_BIT
+	bool "Auto-detect bit size"
 
 endchoice
 
