--- a/arch/arm/dts/imx8mm-venice-u-boot.dtsi
+++ b/arch/arm/dts/imx8mm-venice-u-boot.dtsi
@@ -84,22 +84,26 @@
 			align-end = <4>;
 		};
 
-		blob-ext@1 {
+		ddr-1 {
+			type = "blob-ext";
 			filename = "lpddr4_pmu_train_1d_imem.bin";
 			size = <0x8000>;
 		};
 
-		blob-ext@2 {
+		ddr-2 {
+			type = "blob-ext";
 			filename = "lpddr4_pmu_train_1d_dmem.bin";
 			size = <0x4000>;
 		};
 
-		blob-ext@3 {
+		ddr-3 {
+			type = "blob-ext";
 			filename = "lpddr4_pmu_train_2d_imem.bin";
 			size = <0x8000>;
 		};
 
-		blob-ext@4 {
+		ddr-4 {
+			type = "blob-ext";
 			filename = "lpddr4_pmu_train_2d_dmem.bin";
 			size = <0x4000>;
 		};
