--- a/net/Kconfig
+++ b/net/Kconfig
@@ -14,6 +14,15 @@ config PROT_UDP
 	  Enable a generic udp framework that allows defining a custom
 	  handler for udp protocol.
 
+config BOOTMETHOD_ETH
+	bool "Enable bootmethod for ethernet"
+	depends on BOOTMETHOD
+	default y
+	help
+	  Provide a bootmethod for ethernet so that is it possible to boot
+	  an operationg system over the network, using the PXE (Preboot
+	  Execution Environment) protocol.
+
 config BOOTP_SEND_HOSTNAME
 	bool "Send hostname to DNS server"
 	help
@@ -98,5 +107,4 @@ config SERVERIP_FROM_PROXYDHCP_DELAY_MS
 	  Amount of additional time to wait for ProxyDHCP response after
 		receiving response from main DHCP server. Has no effect if
 		SERVERIP_FROM_PROXYDHCP is false.
-
 endif   # if NET
