bootflow: Add the bootdev uclass and core implementation
A 'bootdev' is a device which can be used to boot an operating system.
It is a child of the media device (e.g. MMC) which handles reading files
from that device, such as a bootflow file.

Add a uclass for bootdev and the various helpers needed to make it
work. Also add a binding file, empty for now.

Change-Id: I3b5bc09d034cd72b2a9c604a0907c10abc05956a
Signed-off-by: Simon Glass <sjg@chromium.org>

--- a/boot/Kconfig
+++ b/boot/Kconfig
@@ -274,6 +274,15 @@ endif # SPL
 
 endif # FIT
 
+config BOOTDEV
+	bool "Bootdevice support"
+	default y
+	help
+	  A bootdev is a standard way of locating something to boot,
+	  typically an Operating System such as Linux. Enable this to support
+	  iterating through available bootdevs to find a bootflow suitable
+	  for booting.
+
 config LEGACY_IMAGE_FORMAT
 	bool "Enable support for the legacy image format"
 	default y if !FIT_SIGNATURE
