--- a/boot/Kconfig
+++ b/boot/Kconfig
@@ -283,6 +283,17 @@ config BOOTDEV
 	  iterating through available bootdevs to find a bootflow suitable
 	  for booting.
 
+config BOOTDEV_DISTRO
+	bool "Bootdevice support for distro boot"
+	depends on BOOTDEV && CMD_PXE
+	default y
+	help
+	  Enables support for distro boot using bootdevs. This makes the
+	  bootdevs look for a 'extlinux/extlinux.conf' on each filesystem
+	  they scan.
+
+	  This provides a way to try out bootdev on an existing boot flow.
+
 config LEGACY_IMAGE_FORMAT
 	bool "Enable support for the legacy image format"
 	default y if !FIT_SIGNATURE
