--- a/boot/Makefile
+++ b/boot/Makefile
@@ -25,6 +25,7 @@ obj-$(CONFIG_ANDROID_BOOT_IMAGE) += image-android.o image-android-dt.o
 obj-$(CONFIG_$(SPL_TPL_)BOOTDEV) += bootdev.o bootdev-uclass.o
 obj-$(CONFIG_$(SPL_TPL_)BOOTDEV) += bootflow.o
 obj-$(CONFIG_$(SPL_TPL_)BOOTDEV) += bootmeth-uclass.o
+obj-$(CONFIG_$(SPL_TPL_)BOOTDEV_DISTRO) += bootmeth_distro.o
 obj-$(CONFIG_$(SPL_TPL_)OF_LIBFDT) += image-fdt.o
 obj-$(CONFIG_$(SPL_TPL_)FIT_SIGNATURE) += fdt_region.o
 obj-$(CONFIG_$(SPL_TPL_)FIT) += image-fit.o
