bootstd: Add an implementation of distro boot
Add a bootmeth driver which handles distro boot from a disk, so we can
boot a bootflow using this commonly used mechanism.

In effect, this provides the same functionality as the 'sysboot' command
and shares the same code. But the interface into it is via a bootmeth.

For now this requires the 'pxe' command be enabled. Future work may tidy
this up so that it can be used without CONFIG_CMDLINE being enabled.

Series-changes: 3
- Use new bootmeth_try_file() function
- Use a short name when BOOTSTD_FULL is not enabled
- Use common bootmeth functions

Signed-off-by: Simon Glass <sjg@chromium.org>
Change-Id: Iafd004865970e7357960cacc4981e212e4cf3d16

--- a/boot/Kconfig
+++ b/boot/Kconfig
@@ -326,6 +326,21 @@ config BOOTSTD_FULL
 	  - support for selecting the ordering of bootdevs using the devicetree
 	    as well as the "boot_targets" environment variable
 
+if BOOTSTD
+
+config BOOTMETH_DISTRO
+	bool "Bootdev support for distro boot"
+	depends on CMD_PXE
+	default y
+	help
+	  Enables support for distro boot using bootdevs. This makes the
+	  bootdevs look for a 'extlinux/extlinux.conf' on each filesystem
+	  they scan.
+
+	  This provides a way to try out standard boot on an existing boot flow.
+
+endif
+
 config LEGACY_IMAGE_FORMAT
 	bool "Enable support for the legacy image format"
 	default y if !FIT_SIGNATURE
