bootstd: Add a bootmeth command
Add a 'bootmeth' command to handle listing and ordering of boot methods.

Signed-off-by: Simon Glass <sjg@chromium.org>
Change-Id: I6f3d772aa3671d526b66580c7989ae6c27c8538a

--- a/cmd/Kconfig
+++ b/cmd/Kconfig
@@ -195,7 +195,7 @@ config CMD_BOOTM
 	  Boot an application image from the memory.
 
 config CMD_BOOTSTD
-	bool "bootdev, bootflow"
+	bool "bootdev, bootflow, bootmeth"
 	default y if BOOTSTD
 	help
 	  Support working with standard boot, including listing available
@@ -206,6 +206,7 @@ config CMD_BOOTSTD
 
 	     bootdev
 	     bootflow
+	     bootmeth
 
 config BOOTM_EFI
 	bool "Support booting UEFI FIT images"
