--- a/board/efi/Kconfig
+++ b/board/efi/Kconfig
@@ -42,6 +42,17 @@ config TARGET_CHROMEOS_EFI_PAYLOAD
 	  takes over once the RAM, video and CPU are fully running.
 	  U-Boot is loaded as a payload from EFI.
 
+config TARGET_CHROMEOS_EFI_APP32
+	bool "efi payload"
+	select EFI_APP
+	help
+	  This is the Chromium OS version of TARGET_EFI_APP32, allowing
+	  Chromium OS to boot on top of EFI.
+
+	  In this case EFI does the early initialisation, and U-Boot
+	  takes over once the RAM, video and CPU are fully running.
+	  U-Boot is loaded as an app from EFI.
+
 endchoice
 
 source "board/efi/efi-x86_app/Kconfig"
