--- a/arch/x86/dts/efi-x86_app.dts
+++ b/arch/x86/dts/efi-x86_app.dts
@@ -9,6 +9,10 @@
 
 #include "tsc_timer.dtsi"
 
+#if defined(CONFIG_CHROMEOS_VBOOT)
+#include "chromeos-efi.dtsi"
+#endif
+
 / {
 	model = "EFI x86 Application";
 	compatible = "efi,x86-app";
