--- a/configs/chromeos_efi-x86_app32_defconfig
+++ b/configs/chromeos_efi-x86_app32_defconfig
@@ -44,3 +44,5 @@ CONFIG_LOG_ERROR_RETURN=y
 # CONFIG_CMD_SF_TEST is not set
 CONFIG_DM_ETH=y
 CONFIG_LOGF_FUNC=y
+CONFIG_BLOBLIST_SIZE=0x18000
+CONFIG_BLOBLIST_SIZE_RELOC=0x18000
