--- a/cros/fwstore/Makefile
+++ b/cros/fwstore/Makefile
@@ -6,5 +6,6 @@
 obj-y += fwstore-uclass.o
 
 obj-y += fwstore_reader.o
+obj-$(CONFIG_$(SPL_TPL_)FWSTORE_FS) += fwstore_fs.o
 obj-$(CONFIG_$(SPL_TPL_)FWSTORE_MMC) += fwstore_mmc.o
 obj-$(CONFIG_$(SPL_TPL_)FWSTORE_SPI_FLASH) += fwstore_spi.o
