--- a/configs/chromeos_efi-x86_app32_defconfig
+++ b/configs/chromeos_efi-x86_app32_defconfig
@@ -47,3 +47,4 @@ CONFIG_LOGF_FUNC=y
 CONFIG_BLOBLIST_SIZE=0x18000
 CONFIG_BLOBLIST_SIZE_RELOC=0x18000
 CONFIG_FWSTORE_FS=y
+# CONFIG_CROS_EC is not set
