--- a/cros/dts/chromeos-efi.dtsi
+++ b/cros/dts/chromeos-efi.dtsi
@@ -97,4 +97,33 @@
 		u-boot-ucode {
 		};
 	};
+
+	read-write-a {
+		align = <0x10000>;
+		u-boot,dm-vpl;
+		type = "section";
+		label-prefix = "rw-a-";
+		firmware-id {
+			/* Alignment: no requirement */
+			align = <4>;
+			size = <0x100>;
+			type = "text";
+			text-label = "frid";
+		};
+	};
+
+	read-write-b {
+		align = <0x10000>;
+		u-boot,dm-vpl;
+		type = "section";
+		label-prefix = "rw-b-";
+		firmware-id {
+			/* Alignment: no requirement */
+			align = <4>;
+			size = <0x100>;
+			type = "text";
+			text-label = "frid";
+		};
+	};
+
 };
