--- a/configs/chromeos_efi-x86_app32_defconfig
+++ b/configs/chromeos_efi-x86_app32_defconfig
@@ -48,3 +48,4 @@ CONFIG_BLOBLIST_SIZE=0x18000
 CONFIG_BLOBLIST_SIZE_RELOC=0x18000
 CONFIG_FWSTORE_FS=y
 # CONFIG_CROS_EC is not set
+CONFIG_NVDATA_FS=y
