--- a/cros/nvdata/Makefile
+++ b/cros/nvdata/Makefile
@@ -5,5 +5,6 @@
 
 obj-y += nvdata-uclass.o
 obj-$(CONFIG_$(SPL_TPL_)NVDATA_CROS_EC) += nvdata_cros_ec.o
+obj-$(CONFIG_$(SPL_TPL_)NVDATA_FS) += nvdata_fs.o
 obj-$(CONFIG_$(SPL_TPL_)NVDATA_TPM) += nvdata_tpm.o
 obj-$(CONFIG_$(SPL_TPL_)NVDATA_CMOS) += nvdata_cmos.o
